Persistent Map benchmarks - update and measurement